[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/Bosses/Hunter/Arrow.png" type="Texture" id=1]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Bosses/Hunter/Arrow.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Bosses/Hunter/Arrow.tres" type="Shape2D" id=4]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 3.87059

[node name="Arrow" type="Node2D"]
pause_mode = 1
position = Vector2( -0.125, -0.25 )
rotation = -1.5708
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.491077, -0.210462 )
texture = ExtResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 12

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.000635147, -0.108423 )
rotation = -1.5708
shape = ExtResource( 4 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( -10.8893, 0.195711 )
rotation = 1.5708
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.441944, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -11.6638, -0.15506 )
shape = SubResource( 1 )
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[editable path="Hitbox"]
